@startuml ClassDiagramStep1

!define ABSTRACT abstract
!theme plain

' Enums and Structs
enum ShapeType {
  CIRCLE
  RECTANGLE
}

struct AABB {
  x : float
  y : float
  width : float
  height : float
  --
  left() : float
  right() : float
  top() : float
  bottom() : float
  center() : Vector2f
  contains(point) : bool
}

' Main Classes
class GameObject {
  #position : Vector2f
  #velocity : Vector2f
  #rotation : float
  #size : Vector2f
  #color : Color
  #shapeType : ShapeType
  #collisionBox : AABB
  --
  +GameObject(x, y, width, height, shape)
  +virtual ~GameObject()
  +virtual update(deltaTime)
  +virtual render(window)
  +getPosition() : Vector2f
  +getVelocity() : Vector2f
  +getRotation() : float
  +getSize() : Vector2f
  +getColor() : Color
  +getCollisionBox() : AABB
  +getShapeType() : ShapeType
  +setPosition(x, y)
  +setVelocity(vx, vy)
  +setRotation(angle)
  +setColor(color)
  +setSize(width, height)
  +addVelocity(vx, vy)
  +rotate(angle)
  #updateCollisionBox()
  -initializeShapes()
}

class Game {
  -window : RenderWindow
  -gameObjects : vector<unique_ptr<GameObject>>
  -isRunning : bool
  -deltaTime : float
  -frameClock : Clock
  -frameCount : int
  -fpsClock : Clock
  --
  +Game()
  +~Game()
  +init()
  +run()
  +quit()
  +addGameObject(obj)
  +removeGameObject(obj)
  -initializeTestObjects()
  -update(deltaTime)
  -render()
  -checkCollisions()
}

class InputManager {
  -currentKeyPressed : map<Key, bool>
  -previousKeyPressed : map<Key, bool>
  -keyCallbacks : map<Key, vector<Callback>>
  -currentMousePressed : map<Button, bool>
  -mouseCallbacks : map<Button, vector<Callback>>
  -mousePosition : Vector2f
  -windowShouldClose : bool
  --
  +{static} getInstance() : InputManager&
  +update(window)
  +registerKeyCallback(key, callback)
  +registerMouseCallback(button, callback)
  +isKeyPressed(key) : bool
  +wasKeyPressed(key) : bool
  +isMouseButtonPressed(button) : bool
  +getMousePosition() : Vector2f
  +shouldWindowClose() : bool
  -InputManager()
  -processEvent(event)
}

class CollisionDetector {
  +{static} checkAABB(box1, box2) : bool
  +{static} checkAABB(obj1, obj2) : bool
  +{static} checkCircleAABB(center, radius, box) : bool
  +{static} checkCircleAABB(circle, box) : bool
  +{static} getCollisionNormal(box1, box2) : Vector2f
  +{static} getClosestPointOnAABB(point, box) : Vector2f
  -CollisionDetector()
  -getAxisOverlap(min1, max1, min2, max2) : float
}

' Relationships
GameObject --> ShapeType : uses
GameObject --> AABB : has
Game --> GameObject : manages
Game --> InputManager : uses
Game --> CollisionDetector : uses
InputManager --> InputCallback : defines
CollisionDetector --> AABB : checks
CollisionDetector --> GameObject : checks

' Notes
note right of GameObject
  Base class for all game objects.
  Handles position, velocity,
  rotation, rendering, and collision.
end note

note right of Game
  Main game loop manager.
  Manages window, objects, timing,
  and collision checks.
end note

note right of InputManager
  Singleton pattern.
  Handles keyboard and mouse input,
  event callbacks.
end note

note right of CollisionDetector
  Utility class (static methods only).
  AABB and circle-AABB collision
  detection algorithms.
end note

@enduml
